# road-vision-core-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_12_28_2248-9849a9ebe30f_create_users_table.py  2025_12_28_2302-29a7bfb4766c_create_users_table.py  2025_12_29_0354-c711e1e4da35_create_users_table.py  2025_12_30_0147-958497c5a665_create_access_tokens_table.py  2026_01_02_0157-5d8f0f7d0ffd_create_road_condition_features_table.py  2026_01_03_1242-6aed89e8e9ab_create_road_condition_features_table.py
src/: main.py
src/common/config/: config.py
src/common/constants/: road_type.py
src/common/database/: db_helper.py
src/common/dependencies/: access_tokens_dependency.py  auth_backend.py  auth_manager_dependency.py  fastapi_users.py  strategy.py  users_dependency.py
src/common/dependencies/auth/: auth_manager.py  auth_manager_dependency.py  fastapi_users.py
src/common/mapper/users/: road_condition_features_mapper.py  users_mapper.py
src/common/models/: access_token.py  base.py  road_condition_feature.py  user.py
src/config/: config.py
src/modules/auth/manager/: auth_manager.py
src/modules/auth/presenter/: auth_controller.py
src/modules/auth/strategy/: strategy.py
src/modules/road_condition_features/data/: road_condition_feature_repository.py
src/modules/road_condition_features/domain/: road_condition_feature_service.py
src/modules/road_condition_features/dto/: road_condition_feautre_dto.py
src/modules/road_condition_features/presenter/: road_condition_feature_controller.py
(+6 files in other folders)
